--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -73,15 +73,36 @@ jobs:
               echo "Error: Test coverage has to be at least ${MIN_COVERAGE}"
               exit 1
           fi
+
+  test-notebooks:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.5, 3.6, 3.7, 3.8]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
     - name: Install notebook dependencies
       run: |
+        pip install --upgrade pip
         pip install -e .[tests,notebooks]
     - name: Test notebooks with nbval
       run: |
-          pytest notebooks -r a --nbval --sanitize-with tests/notebook-tests.cfg --no-cov
+          pytest notebooks -r a --nbval-lax --sanitize-with tests/notebook-tests.cfg --no-cov
+    - name: Test notebooks strictly
+      if: matrix.python == 3.7
+      run: |
+        pytest notebooks -r a --nbval --sanitize-with tests/notebook-tests.cfg --no-cov
+
 
   deploy-test-pypi:
-    needs: build
+    needs: test-notebooks
     if: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
