--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -96,7 +96,7 @@ jobs:
       run: |
           pytest notebooks -r a --nbval-lax --sanitize-with tests/notebook-tests.cfg --no-cov
     - name: Test notebooks strictly
-      if: matrix.python == 3.7
+      if: matrix.python-version == 3.7
       run: |
         pytest notebooks -r a --nbval --sanitize-with tests/notebook-tests.cfg --no-cov
 
