--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,10 @@
 #       ├── run files are here
 #       └── they shouldn't need to be touched directly
 MAGICC_EXECUTABLE_7=/path/to/magicc/bin/magicc
+
+# How many MAGICC workers can run in parallel?
+MAGICC_WORKER_NUMBER=4
+
+# Where should the MAGICC workers be located on the filesystem (you need about
+# 500Mb space per worker at the moment)
+MAGICC_WORKER_ROOT_DIR=~/Desktop
