--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -64,7 +64,7 @@ jobs:
         pip install -e .[tests] --use-feature=2020-resolver
     - name: Test with pytest
       env:
-        MIN_COVERAGE: 30  # TODO: put this back up to 95 once we start writing
+        MIN_COVERAGE: 95
       run: |
           pytest tests -r a --cov=openscm_runner --cov-report=''
           if ! coverage report --fail-under=${MIN_COVERAGE} --show-missing
