--- a/.pylintrc
+++ b/.pylintrc
@@ -16,6 +16,7 @@ disable=
     import-error
 
 [SIMILARITIES]
+min-similarity-lines=7
 ignore-comments=no
 ignore-docstrings=yes
 ignore-imports=yes
