--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dev dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .[dev]
+        pip install -e .[dev] --use-feature=2020-resolver
     - name: Formatting and linters
       run: |
         black --check src tests setup.py --exclude openscm_runner/_version.py
@@ -61,7 +61,7 @@ jobs:
     - name: Install test dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .[tests]
+        pip install -e .[tests] --use-feature=2020-resolver
     - name: Test with pytest
       env:
         MIN_COVERAGE: 30  # TODO: put this back up to 95 once we start writing
@@ -91,7 +91,7 @@ jobs:
     - name: Install notebook dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .[tests,notebooks]
+        pip install -e .[tests,notebooks] --use-feature=2020-resolver
     - name: Test notebooks with nbval
       run: |
           pytest notebooks -r a --nbval-lax --sanitize-with tests/notebook-tests.cfg --no-cov
@@ -119,7 +119,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install -e .[dev]
+        pip install -e .[dev] --use-feature=2020-resolver
     - name: Create package
       run: python setup.py sdist bdist_wheel --universal
     - name: Publish package to PyPI
