Fix path stamp regexp for notebook tests

--- a/tests/notebook-tests.cfg
+++ b/tests/notebook-tests.cfg
@@ -7,5 +7,5 @@ regex: id="\d*"
 replace: ID-STAMP
 
 [regex3]
-regex: \/\S+\/openscm_runner\/src\S+\:
+regex: \/\S+\/openscm-runner\/src\S+\:
 replace: PATH-STAMP
