--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -18,7 +18,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dev dependencies
       run: |
-        pip install --upgrade pip
+        pip install --upgrade pip wheel
         pip install -e .[dev] --use-feature=2020-resolver
     - name: Formatting and linters
       run: |
@@ -60,7 +60,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install test dependencies
       run: |
-        pip install --upgrade pip
+        pip install --upgrade pip wheel
         pip install -e .[tests] --use-feature=2020-resolver
     - name: Test with pytest
       env:
@@ -90,7 +90,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install notebook dependencies
       run: |
-        pip install --upgrade pip
+        pip install --upgrade pip wheel
         pip install -e .[tests,notebooks] --use-feature=2020-resolver
     - name: Test notebooks with nbval
       run: |
@@ -100,8 +100,28 @@ jobs:
       run: |
         pytest notebooks -r a --nbval --sanitize-with tests/notebook-tests.cfg --no-cov
 
-  deploy-pypi:
+  test-install:
     needs: test-notebooks
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Setup python
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Test installation
+      run: |
+        pip install --upgrade pip wheel
+        pip install .
+        python scripts/test_install.py
+
+  deploy-pypi:
+    needs: test-install
     if: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
@@ -118,7 +138,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
+        pip install --upgrade pip wheel
         pip install -e .[dev] --use-feature=2020-resolver
     - name: Create package
       run: python setup.py sdist bdist_wheel --universal
