Force run test pypi install

--- a/.github/workflows/test-pypi-install.yml
+++ b/.github/workflows/test-pypi-install.yml
@@ -1,5 +1,5 @@
 name: Test PyPI install
-# on:
+on: push
 #   schedule:
 #     # * is a special character in YAML so you have to quote this string
 #     - cron:  '0 0 * * 3'
