--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,6 @@
+### MAGICC ###
+# ---------- #
+
 # Path to the compiled MAGICC executable.
 #   The assumption is made that your MAGICC directory structure looks like
 #   this:
@@ -14,8 +17,13 @@ MAGICC_EXECUTABLE_7=/path/to/magicc/bin/magicc
 MAGICC_WORKER_NUMBER=4
 
 # Where should the MAGICC workers be located on the filesystem (you need about
-# 500Mb space per worker at the moment)
+# 500Mb space per worker at the moment)?
 MAGICC_WORKER_ROOT_DIR=~/Desktop
 
+### Cicero-SCM ###
+# ------------- #
+CICEROSCM_WORKER_NUMBER=4
+
+# Where should Cicero-SCM workers be located on the filesystem
 # How many cores should be used when running FaIR in parallel?
 FAIR_WORKER_NUMBER=4
