Fix CI requirements

--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -67,7 +67,7 @@ jobs:
     - name: Install test dependencies
       run: |
         pip install --upgrade pip wheel
-        pip install -e .[tests]
+        pip install -e .[tests,models]
     - name: Test with pytest
       env:
         MIN_COVERAGE: 90
@@ -96,7 +96,7 @@ jobs:
     - name: Install notebook dependencies
       run: |
         pip install --upgrade pip wheel
-        pip install -e .[tests,notebooks]
+        pip install -e .[tests,models,notebooks]
     - name: Test notebooks with nbval
       run: |
           pytest notebooks -r a --nbval-lax --sanitize-with tests/notebook-tests.cfg --no-cov
