--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = zebedee.nicholls@climate-energy-college.org, robert.gieseke@pik-p
 license = 3-Clause BSD License
 
 description = Thin wrapper to run simple climate models (emissions driven runs only)
-description-file = README.rst
+description_file = README.rst
 long_description_content_type = text/x-rst
 long_description =
     OpenSCM-Runner
@@ -48,6 +48,9 @@ install_requires =
     scmdata >= 0.7.4
     tqdm
     importlib-metadata; python_version < '3.8'
+
+[options.packages.find]
+where = src
 
 [options.extras_require]
 fair =
