--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -123,8 +123,8 @@ jobs:
         python scripts/test_install.py
 
   deploy-pypi:
-    # needs: [linting-and-docs,build,test-notebooks,test-install]
-    # if: startsWith(github.ref, 'refs/tags/v')
+    needs: [linting-and-docs,build,test-notebooks,test-install]
+    if: startsWith(github.ref, 'refs/tags/v')
 
     runs-on: ubuntu-latest
     strategy:
@@ -157,5 +157,5 @@ jobs:
     - name: Publish package to PyPI
       uses: pypa/gh-action-pypi-publish@master
       with:
-        user: blocker
+        user: __token__
         password: ${{ secrets.pypi_password }}
