--- a/setup.cfg
+++ b/setup.cfg
@@ -22,16 +22,16 @@ long_description =
 url = https://github.com/openscm/openscm-runner
 # full list at https://pypi.org/pypi?%3Aaction=list_classifiers
 classifiers =
-    "Development Status :: 4 - Beta"
-    "License :: OSI Approved :: BSD License"
-    "Intended Audience :: Developers"
-    "Operating System :: OS Independent"
+    Development Status :: 4 - Beta
+    License :: OSI Approved :: BSD License
+    Intended Audience :: Developers
+    Operating System :: OS Independent
     Intended Audience :: Science/Research
     Programming Language :: Python
     Programming Language :: Python :: 3
-    "Programming Language :: Python :: 3.7"
-    "Programming Language :: Python :: 3.8"
-    "Programming Language :: Python :: 3.9"
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering
 
 [options]
