--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -53,8 +53,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        # no mac binary for CICERO so fails code coverage
+        # os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        os: ["ubuntu-latest", "windows-latest"]
         python-version: [3.7, 3.8, 3.9]
+    env:
+      MIN_COVERAGE: 90
 
     steps:
     - name: Checkout repository
@@ -67,11 +71,14 @@ jobs:
       run: |
         pip install --upgrade pip wheel
         pip install -e .[tests,models]
-    - name: Test with pytest
-      env:
-        MIN_COVERAGE: 90
+    - name: Test with pytest non-windows
+      if: runner.os != 'Windows'
       run: |
-          pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=${MIN_COVERAGE}
+          pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=$MIN_COVERAGE
+    - name: Test with pytest windows
+      if: runner.os == 'Windows'
+      run: |
+          pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=$env:MIN_COVERAGE
 
   test-notebooks:
     runs-on: ubuntu-latest
