--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -76,21 +76,21 @@ jobs:
       run: |
         pip install --upgrade pip wheel
         pip install -e .[tests,models]
-    - name: Set environment variables Linux
-      if: runner.os == "Linux"
+    - name: Test with pytest Linux
+      if: runner.os == 'Linux'
       env:
         MAGICC_EXECUTABLE_7: bin/magicc/magicc-v7.5.3/bin/magicc
       run: |
           pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=$env:MIN_COVERAGE
-    - name: Set environment variables macOS
-      if: runner.os == "macOS"
+    - name: Test with pytest macOS
+      if: runner.os == 'macOS'
       env:
         MAGICC_EXECUTABLE_7: bin/magicc/magicc-v7.5.3/bin/magicc-darwin-amd64
         MIN_COVERAGE: 80 # Due to no CICERO binary being available
       run: |
           pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=$env:MIN_COVERAGE
     - name: Test with pytest Windows
-      if: runner.os == "Windows"
+      if: runner.os == 'Windows'
       run: |
           pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=$env:MIN_COVERAGE
 
