Making things work after solving merge conflict... Adding forgotten files...

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,9 +59,13 @@ fair =
 magicc =
     pymagicc >= 2.0.0, < 3
 
+ciceroscmpy =
+    ciceroscm @ git+https://github.com/ciceroOslo/ciceroscm.git	
+
 models =
     %(fair)s
     %(magicc)s
+    %(ciceroscmpy)s	
 
 notebooks =
     ipywidgets
