--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -51,6 +51,7 @@ jobs:
 
   build:
     runs-on: ${{ matrix.os }}
+    environment: CI
     strategy:
       matrix:
         # no mac binary for CICERO so fails code coverage
@@ -96,6 +97,7 @@ jobs:
 
   test-notebooks:
     runs-on: ubuntu-latest
+    environment: CI
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
