Attempting to fix deployment issue + cleanup

--- a/setup.cfg
+++ b/setup.cfg
@@ -111,6 +111,9 @@ openscm_runner =
     adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFLUC/*.txt
     adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFSUN/*.txt
     adapters/ciceroscm_adapter/utils_templates/run_dir/input_RF/RFVOLC/*.txt
+    adapters/ciceroscm_py_adapter/utils_templates
+    adapters/ciceroscm_py_adapter/*.txt
+	
 
 [flake8]
 max-line-length = 88
