--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -89,7 +89,10 @@ jobs:
         MAGICC_EXECUTABLE_7: bin/magicc/magicc-v7.5.3/bin/magicc-darwin-amd64
       run: |
           # Not testing coverage for macOS due to the CIRERO binary being unavailable
-          export DYLD_LIBRARY_PATH=/opt/homebrew/opt/gfortran@11/lib/gcc/current:$DYLD_LIBRARY_PATH
+          brew --prefix gfortran@11
+          GFORTRAN_PREFIX=$(brew --prefix gfortran@11)/../gfortran
+          ls /opt/homebrew/opt
+          export DYLD_LIBRARY_PATH=$GFORTRAN_PREFIX/lib/gcc/current:$DYLD_LIBRARY_PATH
           pytest tests -r a
     - name: Test with pytest Windows
       if: runner.os == 'Windows'
