--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ magicc =
     pymagicc >= 2.0.0, < 3
 
 ciceroscmpy =
-    ciceroscm @ git+https://github.com/ciceroOslo/ciceroscm.git	
+    ciceroscm
 
 models =
     %(fair)s
