--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,8 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering
 
 [options]
@@ -54,7 +56,7 @@ where = src
 
 [options.extras_require]
 fair =
-    fair
+    fair < 2
 
 magicc =
     pymagicc >= 2.0.0, < 3
@@ -74,7 +76,7 @@ notebooks =
 
 tests =
     codecov
-    coverage
+    coverage>=7
     nbval
     pytest-cov
     pytest>=4.0
