--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -56,7 +56,7 @@ jobs:
       matrix:
         # no mac binary for CICERO so fails code coverage
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, "3.10", 3.11]
     env:
       MIN_COVERAGE: 90
 
@@ -82,7 +82,7 @@ jobs:
       env:
         MAGICC_EXECUTABLE_7: bin/magicc/magicc-v7.5.3/bin/magicc
       run: |
-          pytest tests -r a --cov=openscm_runner --cov-report='' --cov-fail-under=$MIN_COVERAGE
+          pytest tests -r a --cov=openscm_runner --cov-report='term-missing' --cov-fail-under=$MIN_COVERAGE
     - name: Test with pytest macOS
       if: runner.os == 'macOS'
       env:
@@ -134,7 +134,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, "3.10", 3.11]
 
     steps:
     - name: Checkout repository
