--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,25 @@
-# binary files
+# Notebooks
+*.ipynb
+
+# Databases
+*.db
+
+# Jupyter cache
+.jupyter_cache
+
+# Licence check
+licence-check.txt
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Binary files
 bin
-
-# vim swap files
-*.swp
-
-# temporary data files
-scripts/*.csv
-scripts/*.json
 
 # Compiled Dynamic libraries
 *.so
@@ -33,14 +46,6 @@ scripts/*.json
 *.a
 *.lib
 
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
 # Distribution / packaging
 .Python
 build/
@@ -55,6 +60,8 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -73,12 +80,14 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
 
@@ -90,6 +99,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -107,11 +117,26 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# IPython
+profile_default/
+ipython_config.py
+
 # pyenv
 .python-version
 
-# celery beat schedule file
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -140,6 +165,14 @@ venv3.bak/
 
 # mypy
 .mypy_cache/
+.dmypy.json
+dmypy.json
 
-# DS_Store
+# Pyre type checker
+.pyre/
+
+# Mac stuff
 *.DS_Store
+
+# Swap files
+*.swp
