--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,9 +95,6 @@ select = [
     "RUF",  # ruff specifics
     "UP",  # pyupgrade
     "S",  # flake8-bandit
-    # pandas support via pandas-vet. In some cases we will want to disable
-    # this because it can lead to too many false positives.
-    "PD",
 ]
 unfixable = [
     "PD002",  # Disable autofix for inplace as this often introduces bugs
@@ -105,6 +102,7 @@ unfixable = [
 ignore = [
     "D200",  # One-line docstring should fit on one line with quotes
     "D400",  # First line should end with a period
+    "PD",  # Pandas' suggestions: ruff gets confused with scmdata's API
 ]
 line-length = 88
 
