--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ tqdm = "^4.66.1"
 fair = "<2"
 pymagicc = "<3"
 ciceroscm = "^1.0.0"
+# TODO: remove this and then get update in ciceroscm
+pandas = "<2"
 ipywidgets = "^8.1.1"
 seaborn = "^0.13.1"
 
