More CI trickery

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,9 @@ jobs:
         os: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
         python-version: [ "3.9", "3.10", "3.11" ]
     runs-on: "${{ matrix.os }}"
+    defaults:
+      run:
+        shell: bash  # Need this for windows to not explode apparently
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -96,6 +99,9 @@ jobs:
         os: [ "ubuntu-latest" ]
         python-version: [ "3.9", "3.10", "3.11" ]
     runs-on: "${{ matrix.os }}"
+    defaults:
+      run:
+        shell: bash  # Need this for windows to not explode apparently
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
