More windows jumping

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -50,6 +50,7 @@ runs:
       if: ${{ inputs.run-poetry-install == 'true' }}
       shell: bash
       run: |
+        source $VENV  # ensure windows will find poetry
         poetry config virtualenvs.create true
         poetry config virtualenvs.in-project true
         poetry env use ${{ inputs.python-version }}
@@ -58,4 +59,6 @@ runs:
     - name: Install package
       if: ${{ inputs.run-poetry-install == 'true' }}
       shell: bash
-      run: poetry install --no-interaction ${{ inputs.poetry-dependency-install-flags }}
+      run: |
+        source $VENV  # ensure windows will find poetry
+        poetry install --no-interaction ${{ inputs.poetry-dependency-install-flags }}
