--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
           venv-id: "tests-${{ runner.os }}"
           poetry-dependency-install-flags: "--all-extras"
       - name: Download MAGICC non-windows
-        if: runner.os != 'Windows'
+        # if: runner.os != 'Windows'
         run: |
           mkdir -p bin/magicc/magicc-v7.5.3
           wget -O "bin/magicc/magicc-v7.5.3.tar.gz" "${{ secrets.MAGICC_LINK_FROM_MAGICC_DOT_ORG }}"
@@ -86,7 +86,6 @@ jobs:
         env:
           MAGICC_EXECUTABLE_7: bin/magicc/magicc-v7.5.3/bin/magicc.exe
         run: |
-          # TODO: loosen coverage requirements if CI fails, otherwise delete this comment
           source $VENV  # ensure windows will find poetry
           poetry run pytest -r a -v src tests --doctest-modules --cov=src --cov-report=term-missing --cov-report=xml
       - name: Upload coverage reports to Codecov (Linux only)
