--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -29,25 +29,30 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ inputs.python-version }}
+        cache: poetry
     - name: Load cached Poetry installation
       id: cached-poetry
       uses: actions/cache@v3
       with:
         path: ~/.local  # the path depends on the OS
-        key: "${{ inputs.os }}-poetry-5"  # increment to reset cache
+        key: "${{ inputs.os }}-${{ inputs.python-version }}-poetry-1"  # increment to reset cache
     - name: Install Poetry
       if: steps.cached-poetry.outputs.cache-hit != 'true'
       uses: snok/install-poetry@v1
       with:
         virtualenvs-create: true
         virtualenvs-in-project: true
-    - name: Load cached venv
-      if: ${{ inputs.run-poetry-install == 'true' }}
-      id: cached-poetry-dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache
-        key: "venv-${{ inputs.venv-id }}-${{ inputs.os }}-${{ inputs.python-version }}-${{ hashFiles('**/poetry.lock') }}"
+    # Maybe delete this
+    - name: Set Poetry environment
+      run: |
+        poetry env use ${{ inputs.python-version }}
+    # - name: Load cached venv
+    #   if: ${{ inputs.run-poetry-install == 'true' }}
+    #   id: cached-poetry-dependencies
+    #   uses: actions/cache@v3
+    #   with:
+    #     path: ~/.cache
+    #     key: "venv-${{ inputs.venv-id }}-${{ inputs.os }}-${{ inputs.python-version }}-${{ hashFiles('**/poetry.lock') }}"
     # Install dependencies first so that our package doesn't appear in the cache by accident
     - name: Install dependencies
       if: ${{ inputs.run-poetry-install == 'true' }}
