--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,8 +42,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
         python-version: [ "3.9", "3.10", "3.11" ]
+        os: [ "ubuntu-latest", "macos-latest", "windows-latest" ]
+        include:
+          - VENV: .venv/bin/activate
+          - os: windows-latest
+            VENV: .venv/scripts/activate
     runs-on: "${{ matrix.os }}"
     defaults:
       run:
